--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -88,6 +88,40 @@
                     "message": 5
                 }
             }
+        },
+        {
+            "label": "run-make-install",
+            "dependsOn": "run-cmake",
+            "type": "shell",
+            "command": "make install",
+            "args": [],
+            "options": {
+                "cwd": "${workspaceRoot}/build"
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": {
+                "owner": "cpp",
+                "fileLocation": [
+                    "absolute"
+                ],
+                "pattern": {
+                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "severity": 4,
+                    "message": 5
+                }
+            }
         }
     ]
 }
