--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,7 +4,6 @@ message("")
 message("========== START: ${PROJECT_NAME} ==========")
 
 # c++ config
-set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++17 -stdlib=libc++")
@@ -37,9 +36,15 @@ target_include_directories(${PROJECT_NAME}
     PRIVATE
         ${CMAKE_SOURCE_DIR}/engine/src
 )
+
 target_link_libraries(${PROJECT_NAME} 
     ${Boost_LIBRARIES}
     vscpp-engine
+)
+
+target_compile_definitions(${PROJECT_NAME} 
+    PRIVATE 
+        VIPER_PLATFORM_OSX
 )
 
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
